# migration-assessor

./: .gitignore  AGENTS.md  Cargo.toml  README.md  ast-diff-plan.md  ast-diff-refactor-plan.md  diff-upgrade-plan.md  language-abstraction-plan.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml  release.yml
aws-large-migrations/: 01-strategy-large-scale-migrations.md  02-large-migration-intro-governance.md  03-large-migration-guide.md  04-large-migration-foundation-playbook.md  05-large-migration-governance-playbook.md  06-large-migration-portfolio-playbook.md  07-large-migration-migration-playbook.md  08-pattern-migrate-shared-file-systems.md  09-pattern-get-started-automated-portfolio-discovery.md
core/: Cargo.toml  build.rs
core/compatibility_data/rust_libraries/: cli.toml  database.toml  error_handling.toml  http_client.toml  logging.toml  serialization.toml  template_engine.toml  testing.toml  utility.toml  web_framework.toml
core/compatibility_data/ts_libraries/: cli.toml  database.toml  error_handling.toml  http_client.toml  logging.toml  serialization.toml  template_engine.toml  testing.toml  utility.toml  web_framework.toml
core/naming_data/rust_to_ts/: api_map.toml  conventions.toml  type_map.toml
core/naming_data/ts_to_rust/: api_map.toml  conventions.toml  type_map.toml
core/src/: cache.rs  compatibility.rs  compatibility_data.toml  config.rs  db.rs  discovery.rs  error.rs  git.rs  graph.rs  lib.rs  manifest.rs  output.rs  output_paths.rs  project.rs  recommendation.rs  report.rs  scores.rs  spec_writer.rs  task_queue.rs  util.rs  verify.rs
core/src/align/: api_map.rs  matcher.rs  mod.rs  naming.rs  signature.rs
core/src/ast/: mod.rs  rust.rs  typescript.rs
core/src/compatibility/: matching.rs  matrix.rs  types.rs
core/src/diff/: dependency.rs  doc.rs  engine.rs  logic.rs  mapping.rs  mod.rs  signature.rs
core/src/language/: javascript.rs  mod.rs  registry.rs  rust.rs  typescript.rs
core/src/parser/: javascript.rs  mod.rs  rust.rs  typescript.rs
core/src/references/: javascript.rs  mod.rs  rust.rs  typescript.rs
core/src/symbols/: javascript.rs  mod.rs  rust.rs  typescript.rs
docs/: add-new-language.md
e2e-full/: migration.toml
e2e-full/ts-ecommerce-migration/config/: migration.toml
e2e-full/ts-ecommerce-migration/diffs/: affected-files.json  diff-2026-07-20.json
e2e-full/ts-ecommerce-migration/report/: index.html  manifest.json  overview.json  project.json  scores.json
e2e-full/ts-ecommerce-migration/report/graph/: cycles.json  edges.json  nodes.json
e2e-full/ts-ecommerce-migration/report/references/reverse/: C.json
eve-migration/: migration.toml
eve-migration/eve_clone_io5fuc3d.4nf-migration/config/: migration.toml
eve-migration/eve_clone_io5fuc3d.4nf-migration/diffs/: affected-files.json
eve-migration/eve_clone_io5fuc3d.4nf-migration/report/: index.html  manifest.json  overview.json  project.json  scores.json
eve-migration/eve_clone_io5fuc3d.4nf-migration/report/graph/: cycles.json  edges.json  nodes.json
migration-analyze/: Cargo.toml
migration-analyze/src/: main.rs  progress.rs
migration-analyze/src/commands/: analyze.rs  boundaries.rs  check_updates.rs  context.rs  diff.rs  init.rs  mcp.rs  mod.rs  report.rs  serve.rs  summary.rs  verify.rs
migration-analyze/src/commands/diff/: git_utils.rs  logic.rs  propagation.rs  types.rs
migration-analyze/src/commands/report/: html.rs
migration-analyze/src/static/: boundaries.css
migration-analyze/src/web/: routes.rs  templates.rs
migration-analyze/tests/: e2e_analyze.rs  e2e_diff.rs  e2e_init.rs  e2e_serve.rs
migration-analyze/tests/common/: mod.rs
plans/: 000-baseline-cleanup.md  001-ci-cd.md  001-dedup-git-utils.md  001-real-time-alignment.md  002-fix-ts-parse.md  002-valid-languages.md  003-fix-use-visitor.md  003-project-context.md  004-dedup-diff-analyzer.md  004-sharded-references.md  005-diff-module-tests.md  005-incremental-cache.md  006-output-restructure.md  007-graph-enhancement.md  008-parallel-extraction.md  009-ndjson-output.md  README.md
rust-ecommerce/: Cargo.toml
rust-ecommerce/src/: lib.rs
rust-ecommerce/src/models/: product.rs  user.rs
rust-ecommerce/src/services/: cart.rs  mod.rs  order.rs
rust-ecommerce/src/utils/: format.rs  mod.rs  validation.rs
(+1078 files in other folders)
