[package]
name = "migration-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
cargo_metadata.workspace = true
chrono.workspace = true
glob.workspace = true
oxc_allocator.workspace = true
oxc_ast.workspace = true
oxc_parser.workspace = true
oxc_semantic.workspace = true
oxc_span.workspace = true
oxc_syntax.workspace = true
proc-macro2.workspace = true
quote.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
syn.workspace = true
thiserror.workspace = true
toml.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
