[package]
name = "migration-analyze"
version.workspace = true
edition.workspace = true
repository = "https://github.com/NLazyCat/migration-assessor"
homepage = "https://github.com/NLazyCat/migration-assessor"
license = "MIT"

[dependencies]
migration-core = { path = "../core" }
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
git2.workspace = true
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
open = "5"
