[package]
name = "migration-analyze"
version.workspace = true
edition.workspace = true
repository = "https://github.com/NLazyCat/migration-assessor"
homepage = "https://github.com/NLazyCat/migration-assessor"
license = "MIT"

[dependencies]
migration-core = { path = "../core" }
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
git2.workspace = true
rayon.workspace = true
console = "0.15"
indicatif = "0.17"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
