[package]
name = "migration-analyze"
version.workspace = true
edition.workspace = true
repository = "https://github.com/NLazyCat/migration-assessor"
homepage = "https://github.com/NLazyCat/migration-assessor"
license = "MIT"

[dependencies]
migration-core = { path = "../core" }
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
git2.workspace = true
rayon.workspace = true
console = "0.16"
indicatif = "0.18"
rusqlite.workspace = true

[dev-dependencies]
assert_cmd = "2.2"
predicates = "3.1"
tempfile = "3"
